5.- Modificar la etiqueta "Fecha Expiración Del Documento" por "Fecha Expedición Del Documento:"

--- a/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/explodedbpfinder/explodedbpfinder.zul
+++ b/hybris/hybris/bin/custom/sdh/sdhbackoffice/backoffice/resources/widgets/explodedbpfinder/explodedbpfinder.zul
@@ -39,7 +39,7 @@
                     </row>
                     <row>
                         <cell>
-                            <label value="Fecha Expiración Del Documento:"/>
+                            <label value="Fecha Expedición Del Documento:"/>
                         </cell>
                         <cell>
                             <hbox align="center">
