Se agregan cambios para loggin y tramites

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -505,3 +505,8 @@ background-color: black;
 .navigation--bottom .nav__links--products li a {
     height: auto !important;
 }
+
+.tamnewtwo{
+	height: 48px !important;
+	 border-radius: 20px !important;
+}
