--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25572,3 +25572,7 @@ input[type="search"] {
 .navigation--bottom .nav__links--products li a {
   height: auto !important;
 }
+.tamnewtwo {
+  height: 48px !important;
+  border-radius: 20px !important;
+}
