Se agregan cambios para centrar elementos del loggin

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -510,3 +510,8 @@ background-color: black;
 	height: 48px !important;
 	 border-radius: 20px !important;
 }
+
+//Cambio para centrar login inicial
+.login-left-content-slot {
+    margin-left: 0px !important;
+}
