se agregan cambios para centrar el login

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/redStyle.less
@@ -515,3 +515,9 @@ background-color: black;
 .login-left-content-slot {
     margin-left: 0px !important;
 }
+
+.login-section .headline, .register-section .headline, .checkout-login .headline {
+  padding-top: 1px !important;
+padding-bottom: 1px !important;
+margin-left: 0px !important;
+}
