Se agregan cambios de estilo y se agrega parte de las fuentes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
@@ -1,7 +1,8 @@
+@import "fontMonserrat.less";
+
 body {
     background: #eee !important;
 }
-
 .login-section .newLoggin{
 	width: 380px;
     margin: 2em auto;
@@ -9,6 +10,12 @@ body {
     background: #fafafa;
     border: 1px solid #ebebeb;
     border-radius: 15px;
+}
+
+.font-link-2 {
+	font-family: 'Montserrat-Blod' !important;
+    font-weight: 700 !important;
+	font-size: 14px;
 }
 .main-footer{
     position: absolute;
@@ -30,17 +37,18 @@ body {
     background-color: #fff;
     border: 2px solid #E8F0FB;
     border-radius: 13px;
-    margin-left: -85% !important;
-margin-right: -85% !important;
+    margin-left: -75% !important;
+	margin-right: -80% !important;
+	font-family: 'Montserrat-Blod','Helvetica', 'Arial';
 }
 
 .main-footer .copyright{
-position: relative;
+	position: relative;
     z-index: 10;
     border-top: 1px solid #fff;
     background-color: #36c;
-height:100% !important;
-text-align: center;
+	height:100% !important;
+	text-align: center;
 }
 
 .prefooter h2 {
@@ -48,26 +56,27 @@ text-align: center;
     line-height: 36px;
     font-weight: 600;
     color: #a80521 !important;
+	margin-left: 25px !important;
 }
 
 .prefooter h3 {
-//margin-top: 18px;
-    font-size: 18px;
-    line-height: 27;
+    font-size: 20px;
+    line-height: 36px;
     font-weight: 600;
-    color: #a80521;
+    color: #a80521 !important;
+	font-family: 'Montserrat-Blod';
 }
 
 .footerimg{
- width: auto !important;
+	width: auto !important;
     max-height: 58px !important;
-border-right: 2px solid #E8F0FB;
-padding-right: 25% !important;
+	border-right: 2px solid #E8F0FB;
+	padding-right: 25% !important;
 }
 
 .menu-footer a {
     color: #a80521;
-margin: 5px !important;
+	margin: 5px !important;
 }
 .main-footer .copyright .container {
     background: #36c;
@@ -89,7 +98,7 @@ img .encabezado{
 }
 
 .footerimg_gov{
- margin-top: 10% !important;
+ 	margin-top: 10% !important;
 }
 
 .menu-footer {
@@ -110,3 +119,87 @@ img .encabezado{
 .login-section {
     margin-left: 0px !important;
 }
+
+.global-alerts{
+	margin-top: -3%;
+    margin-bottom: 5%;
+}
+
+.prefooter a {
+    color: #156ab5;
+    word-break: break-all;
+}
+
+.menu-footer a {
+    color: #a80521;
+}
+
+.prefooter h2, .prefooter h3, .prefooter a {
+    display: inline-flex;
+    align-items: center;
+}
+
+.follow-Twitter {
+  background-image: url('../../../responsive/common/images/twitter.svg');
+  position: relative;
+  top: 0px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
+.follow-Facebook {
+  background-image: url('../../../responsive/common/images/facebook.svg');
+  position: relative;
+  top: 0px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
+
+.follow-Instagram {
+  background-image: url('../../../responsive/common/images/instagram.svg');
+  position: relative;
+  top: 0px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
+
+a:hover { 
+	color: #a80521;
+	font-family: 'Montserrat-medium';
+	text-decoration:none;
+}
+
+.font-link-2 {
+	margin-right: 7px !important;
+}
+
+.font-link-2:hover { 
+	color: #a80521;
+	font-family: 'Montserrat-medium';
+	text-decoration:none;
+}
+
+
+
+
+
