Ajuste para botones Cancelar en Publicidad y Gasolina

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25576,3 +25576,13 @@ input[type="search"] {
   height: 48px !important;
   border-radius: 20px !important;
 }
+.login-left-content-slot {
+  margin-left: 0px !important;
+}
+.login-section .headline,
+.register-section .headline,
+.checkout-login .headline {
+  padding-top: 1px !important;
+  padding-bottom: 1px !important;
+  margin-left: 0px !important;
+}
