--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25586,3 +25586,193 @@ input[type="search"] {
   padding-bottom: 1px !important;
   margin-left: 0px !important;
 }
+@font-face {
+  font-family: 'Montserrat-Blod';
+  src: url('../fonts/Montserrat-Bold.ttf');
+  font-style: normal;
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'Montserrat-medium';
+  src: url('../fonts/Montserrat-Medium.ttf');
+  font-style: italic;
+  font-weight: 200;
+}
+body {
+  background: #eee !important;
+}
+.login-section .newLoggin {
+  width: 380px;
+  margin: 1em auto;
+  padding: 2em 2em 2em 2em;
+  background: #fafafa;
+  border: 1px solid #ebebeb;
+  border-radius: 15px;
+}
+.font-link-2 {
+  font-family: 'Montserrat-Blod' !important;
+  font-weight: 700 !important;
+  font-size: 14px;
+}
+.main-footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  background-color: #FFAB00 !important;
+}
+.prefooter {
+  position: relative;
+  z-index: 10;
+  display: grid;
+  grid-template-columns: 1fr 20px 230px;
+  margin-bottom: 21px;
+  padding: 2px;
+  min-height: 1%;
+  background-color: #fff;
+  border: 2px solid #E8F0FB;
+  border-radius: 13px;
+  margin-left: -75% !important;
+  margin-right: -80% !important;
+  font-family: 'Montserrat-Blod', 'Helvetica', 'Arial';
+}
+.main-footer .copyright {
+  position: relative;
+  z-index: 10;
+  border-top: 1px solid #fff;
+  background-color: #36c;
+  height: 100% !important;
+  text-align: center;
+}
+.prefooter h2 {
+  font-size: 24px;
+  line-height: 36px;
+  font-weight: 600;
+  color: #a80521 !important;
+  margin-left: 25px !important;
+}
+.prefooter h3 {
+  font-size: 20px;
+  line-height: 36px;
+  font-weight: 600;
+  color: #a80521 !important;
+  font-family: 'Montserrat-Blod';
+}
+.footerimg {
+  width: auto !important;
+  max-height: 58px !important;
+  border-right: 2px solid #E8F0FB;
+  padding-right: 25% !important;
+}
+.menu-footer a {
+  color: #a80521;
+  margin: 5px !important;
+}
+.main-footer .copyright .container {
+  background: #36c;
+}
+.main-footer .copyright a {
+  position: relative;
+  display: inline-block;
+  vertical-align: top;
+  padding-right: 15px;
+  margin-right: 15px;
+}
+img .encabezado {
+  display: inline-block;
+  vertical-align: top;
+  max-width: 100%;
+  height: auto;
+}
+.footerimg_gov {
+  margin-top: 10% !important;
+}
+.menu-footer {
+  grid-column: 0.25;
+  margin-top: 33px;
+  display: inline-flex;
+}
+.footer-background {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 500px;
+  background-color: #ffab00;
+}
+.login-section {
+  margin-left: 0px !important;
+}
+.global-alerts {
+  margin-top: -3%;
+  margin-bottom: 5%;
+}
+.prefooter a {
+  color: #156ab5;
+  word-break: break-all;
+}
+.menu-footer a {
+  color: #a80521;
+}
+.prefooter h2,
+.prefooter h3,
+.prefooter a {
+  display: inline-flex;
+  align-items: center;
+}
+.follow-Twitter {
+  background-image: url('../../../responsive/common/images/twitter.svg');
+  position: relative;
+  top: 0px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
+.follow-Facebook {
+  background-image: url('../../../responsive/common/images/facebook.svg');
+  position: relative;
+  top: 0px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
+.follow-Instagram {
+  background-image: url('../../../responsive/common/images/instagram.svg');
+  position: relative;
+  top: 0px;
+  display: inline-block;
+  height: 27px;
+  width: 27px;
+  margin: 0 0 0 0.8em;
+  background-position: left center;
+  background-repeat: no-repeat;
+  -webkit-font-smoothing: antialiased;
+  text-indent: 100%;
+  overflow: hidden;
+}
+a:hover {
+  color: #a80521;
+  font-family: 'Montserrat-medium';
+  text-decoration: none;
+}
+.font-link-2 {
+  margin-right: 7px !important;
+}
+.font-link-2:hover {
+  color: #a80521;
+  font-family: 'Montserrat-medium';
+  text-decoration: none;
+}
