--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
@@ -199,7 +199,14 @@ a:hover {
 	text-decoration:none;
 }
 
+div.dataTables_paginateo .paginate_button{
+	margin-right: 25px !important;
+	
+}
 
-
+a.paginate_button{
+    margin-right: 10px !important;
+    padding: 2px;
+}
 
 
