se agrega estilo paginacion

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
@@ -207,6 +207,7 @@ div.dataTables_paginateo .paginate_button{
 a.paginate_button{
     margin-right: 10px !important;
     padding: 2px;
+border-style: outset !important;
 }
 
 
