Ajuste en estado de cuenta par desplegar resumen de deuda

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/_ui/responsive/theme-psalpha/css/style.css
@@ -25776,3 +25776,11 @@ a:hover {
   font-family: 'Montserrat-medium';
   text-decoration: none;
 }
+div.dataTables_paginateo .paginate_button {
+  margin-right: 25px !important;
+}
+a.paginate_button {
+  margin-right: 10px !important;
+  padding: 2px;
+  border-style: outset !important;
+}
