Se agregan cambios para responsive

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
@@ -383,7 +383,51 @@ header {
     position: inherit;
 }
 .main-footer .copyright {
-    height: 40% !important;
+    height: 50% !important;
+}
+.sticky-nav-top .liUserSign {
+    width: 86%;
+}
+div.dataTables_paginate, div.dataTables_info {
+    margin-top: 4%;
+}
+
+div.mensaje{
+margin-top: 20%;
+}
+
+.navigation--bottom .navigation__overflow {
+    width: 100%;
+}
+
+.offcanvas .sticky-nav-top {
+    width: 140% !important;
+}
+
+.main-header .navigation--bottom {
+    width: 46% !important;
+}
+
+.navigation--bottom .nav__links--primary-has__sub .nav__link {
+    text-align: left;
+}
+
+.navigation--bottom .nav__link {
+    width: auto;
+    text-align: left;
+}
+
+.container_new {
+    padding-top: 15%;
+}
+
+.navigation--bottom .nav__links--primary.active .sub__navigation {
+    width: 80%;
+}
+
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li {
+    text-align: left;
+    width: 100%;
 }
 }
 	
