--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
@@ -430,4 +430,9 @@ margin-top: 20%;
     width: 100%;
 }
 }
-	
+
+@media (min-width: 1024px) and (max-width: 1399px){
+.navigation--bottom .nav__links--primary .sub-navigation-section .sub-navigation-list li {
+    padding: 1px !important;
+}
+}
