cambios para buzon

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/_ui-src/responsive/themes/psalpha/less/newStyle.less
@@ -436,3 +436,11 @@ margin-top: 20%;
     padding: 1px !important;
 }
 }
+
+.tableBuzon
+{
+	border: 0 !important;
+    text-align: center !important;
+	min-height: 4px !important;
+	width: auto !important;
+}
